# rusty-rest-api

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  sample.env
.github/workflows/: rust.yml
animal_insurance/: Cargo.toml
animal_insurance/migrations/2021-08-10-071906_create_user/: down.sql  up.sql
animal_insurance/src/: main.rs  models.rs  schema.rs  schema.rs.old  user.rs  utils.rs
