[package]
name = "animal_insurance"
version = "0.1.0"
authors = ["Tony Benoy <me@tonybenoy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.7", features = ["postgres","r2d2","numeric"] }
dotenv="0.14.1"
actix-rt = "1.1.1"
bigdecimal = "0.2.0"
lazy_static = "1.4.0"
config = "0.10.1"
env_logger="0.9.0"
actix-web-validator="2.1.1"
validator = { version = "0.12", features = ["derive"] }
regex = "1"
strum = "0.21"
strum_macros = "0.21"
rand = "0.8.4"